--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^7.0.0",
-    "crawler": "^1.3.0"
+    "crawler": "^1.3.0",
+    "simplecrawler": "^1.1.9"
   }
 }
