--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "commander": "^7.0.0",
     "crawler": "^1.3.0",
+    "jsdom": "^16.4.0",
+    "lowdb": "^1.0.0",
     "simplecrawler": "^1.1.9"
   }
 }
